log
Wed 06 Sep 2023 03:13:53 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bafeb51
Wed 06 Sep 2023 03:23:48 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
b7a6c51
Wed 06 Sep 2023 03:26:57 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
4d7eea1
Wed 06 Sep 2023 03:33:42 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
861a2db
Wed 06 Sep 2023 03:34:33 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
5d7436a
Wed 06 Sep 2023 03:37:24 AM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:54: error: expected ‘)’ before ‘{’ token
   92 |     while(!is_equal(key, map->buckets[keyBuscar]->key{
      |                    ~                                 ^
      |                                                      )
hashmap.c:99:36: error: expected ‘)’ before ‘}’ token
   99 |     return map->buckets[keyBuscar];
      |                                    ^
      |                                    )
  100 | }
      | ~                                   
hashmap.c:92:10: note: to match this ‘(’
   92 |     while(!is_equal(key, map->buckets[keyBuscar]->key{
      |          ^
hashmap.c:100:1: error: expected expression before ‘}’ token
  100 | }
      | ^
hashmap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b51a2d1
Wed 06 Sep 2023 03:37:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:55: error: expected ‘)’ before ‘{’ token
   92 |     while(!is_equal(key, map->buckets[keyBuscar]->key){
      |          ~                                            ^
      |                                                       )
hashmap.c:100:1: error: expected expression before ‘}’ token
  100 | }
      | ^
hashmap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31276c9
Wed 06 Sep 2023 03:38:08 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
896a57e
Wed 06 Sep 2023 03:41:32 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  11|2
total_score: 50/70
9ba4fcb
Wed 06 Sep 2023 03:48:14 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
77e516c
